--- a/dada/templates/profile_reset_password.tmpl
+++ b/dada/templates/profile_reset_password.tmpl
@@ -7,7 +7,7 @@
 		<legend>Pick a New Password:</legend> 
 	
 	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
-		<input type="hidden" name="f"     value="profile_reset_password"  /> 
+		<input type="hidden" name="flavor"     value="profile_reset_password"  /> 
 		<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
 		<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" />
 		<p>
