--- a/dada/templates/profile_update_email_confirm.tmpl
+++ b/dada/templates/profile_update_email_confirm.tmpl
@@ -138,7 +138,7 @@
 	<input type="hidden" name="confirmed" value="1" /> 
 	<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" /> 
 	<input type="hidden" name="email" value="<!-- tmpl_var profile.email -->" /> 
-	<input type="hidden" name="f" value="profile_update_email" /> 
+	<input type="hidden" name="flavor" value="profile_update_email" /> 
 	
 	<div class="buttonfloat">
 <input type="submit" value="Update my Profile Email and Mailing List Subscriptions!" class="processing" />	</div>
