--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -245,7 +245,7 @@
 	             <td style="width:12em"> 
 
 	            <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="margin: 0pt; display: inline;" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-	             <input type="hidden" name="f" value="profile_fields" /> 
+	             <input type="hidden" name="flavor" value="profile_fields" /> 
 	             <input type="hidden" name="edit_field" value="1" /> 
 	             <input type="hidden" name="field"  value="<!-- tmpl_var field -->" /> 
 	            <input type="submit" value="[edit]" class="cautionary" style="margin:0px" /> 
@@ -254,7 +254,7 @@
 	
 				<!-- tmpl_if can_move_columns --> 
 					<form style="margin: 0pt; display: inline;" accept-charset="<!-- tmpl_var HTML_CHARSET -->">			
-						<input type="hidden" name="f" value="profile_fields" /> 
+						<input type="hidden" name="flavor" value="profile_fields" /> 
 		             	<input type="hidden" name="process" value="edit_field_order" /> 
 		             	<input type="hidden" name="field"  value="<!-- tmpl_var field -->" />
 						<input type="hidden" name="direction" value="up" /> 
@@ -263,7 +263,7 @@
 					</form>
 					<form style="margin: 0pt; display: inline;" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 					
-						<input type="hidden" name="f" value="profile_fields" /> 
+						<input type="hidden" name="flavor" value="profile_fields" /> 
 		             	<input type="hidden" name="process" value="edit_field_order" /> 
 		             	<input type="hidden" name="field"  value="<!-- tmpl_var field -->" />
 						<input type="hidden" name="direction" value="down" />
@@ -312,7 +312,7 @@
              <td style="width:5em"> 
             
             <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-             <input type="hidden" name="f" value="profile_fields" /> 
+             <input type="hidden" name="flavor" value="profile_fields" /> 
              <input type="hidden" name="process" value="delete_field" /> 
              <input type="hidden" name="field"  value="<!-- tmpl_var field -->" /> 
             <input type="submit" value="&#8855;" class="alertive"  onclick="return removeSubscriberField(this.form);" /> 
@@ -362,7 +362,7 @@
     
     <!-- tmpl_if root_login --> 
          <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="add_edit_field">
-             <input type="hidden" name="f" value="profile_fields" /> 
+             <input type="hidden" name="flavor" value="profile_fields" /> 
 
 			<!-- tmpl_unless edit_field --> 
 			
