--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -106,7 +106,7 @@
 <!-- /tmpl_if --> 
 
 <form name="confirm_add" id="confirm_add" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f"              value="add_email" />
+ <input type="hidden" name="flavor"              value="add_email" />
  <input type="hidden" name="type"           value="<!-- tmpl_var type -->" />
  <input type="hidden" name="return_to"      value="<!-- tmpl_var return_to -->" />
  <input type="hidden" name="return_address" value="<!-- tmpl_var return_address -->" />
