--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -170,7 +170,7 @@
 		
 
 
-	<input type="hidden" name="f"    id="f" value="add" />
+	<input type="hidden" name="flavor"    id="f" value="add" />
 	<input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 	<input type="file"   name="new_email_file" id="new_email_file" />
 	<input type="hidden" name="process" value="1" />
@@ -214,7 +214,7 @@
 
 
 	<form name="paste_addresses"  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-	 <input type="hidden" name="f"    id="f" value="add" />
+	 <input type="hidden" name="flavor"    id="f" value="add" />
 	 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 	 <input type="hidden" name="process" value="1" />
 	 <input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
@@ -263,7 +263,7 @@
 	
 		<form name="via_add_one"  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 	
-		 <input type="hidden" name="f"    id="f" value="add" />
+		 <input type="hidden" name="flavor"    id="f" value="add" />
 		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 		 <input type="hidden" name="process" value="1" />
 		 <input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
