--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -78,7 +78,7 @@
         </p>
         
         <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-         <input type="hidden" name="f" value="new_list" />
+         <input type="hidden" name="flavor" value="new_list" />
          <table align="center">
           <tr>
            <td colspan="2">
