--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -554,7 +554,7 @@ Gravatars
 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="adv_archive_options" />
+<input type="hidden" name="flavor"       value="adv_archive_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Change Archive Options" />
