--- a/dada/templates/adv_sending_preferences_screen.tmpl
+++ b/dada/templates/adv_sending_preferences_screen.tmpl
@@ -260,7 +260,7 @@
 
  
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="adv_sending_preferences" />
+<input type="hidden" name="flavor"       value="adv_sending_preferences" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Changes" />
