--- a/dada/templates/archive_search_form.tmpl
+++ b/dada/templates/archive_search_form.tmpl
@@ -9,7 +9,7 @@
   <br />
   <input type="text"   name="keyword" id="keyword" size="12" />
   <input type="hidden" name="list" value="<!-- tmpl_var name="list" -->" />
-  <input type="hidden" name="f"    value="search_archive" />
+  <input type="hidden" name="flavor"    value="search_archive" />
   <input type="submit" class="processing" value="Search" />
  </p>
 </form>
