--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -24,7 +24,7 @@
 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="back_link" />
+<input type="hidden" name="flavor"       value="back_link" />
 
 <p>
  <label for="website_name">
