--- a/dada/templates/bounce_search_results_modal_menu.tmpl
+++ b/dada/templates/bounce_search_results_modal_menu.tmpl
@@ -12,7 +12,7 @@
 
 
 <input type="hidden" name="address" value="<!-- tmpl_var email ESCAPE=HTML -->" />
-<input type="hidden" name="f"     value="process_bouncing_addresses" />
+<input type="hidden" name="flavor"     value="process_bouncing_addresses" />
 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 
 <!-- tmpl_if return_to --> 
