--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -196,7 +196,7 @@ This address is where Bounced Messages go.
 
 </fieldset>
 	
-<input type="hidden" name="f"       value="change_info" />
+<input type="hidden" name="flavor"       value="change_info" />
 <input type="hidden" name="process" value="1" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
