--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -44,7 +44,7 @@
 <fieldset> 
 
 	
-<input type="hidden" name="f"       value="change_password" />
+<input type="hidden" name="flavor"       value="change_password" />
 <input type="hidden" name="process" value="1" />
 
 <!-- tmpl_unless root_login -->
