--- a/dada/templates/congrats_screen.tmpl
+++ b/dada/templates/congrats_screen.tmpl
@@ -60,7 +60,7 @@
   <input type="checkbox" name="agree" value="yes" />
   I agree to the GPL license and no-SPAM conditions.
  </p>
- <input type="hidden" name="f" value="new_list" />
+ <input type="hidden" name="flavor" value="new_list" />
 
 
  <p>
@@ -100,7 +100,7 @@ If you would like to see more information about your current Program Configurati
  </label>
  <br />
  
-<input type="hidden" name="f" value="setup_info" /> 
+<input type="hidden" name="flavor" value="setup_info" /> 
 
  <input type="password" name="root_password" id="root_password" maxlength="24" />
  
