--- a/dada/templates/delete_email_screen.tmpl
+++ b/dada/templates/delete_email_screen.tmpl
@@ -55,7 +55,7 @@
 
 
  <input type="hidden" name="process" value="1" />
- <input type="hidden" name="f"       value="delete_email" />
+ <input type="hidden" name="flavor"       value="delete_email" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
 
  <div class="buttonfloat">
@@ -83,7 +83,7 @@
  <input type="file" name="delete_email_file" />
 
  <input type="hidden" name="process" value="1" />
- <input type="hidden" name="f"       value="delete_email" />
+ <input type="hidden" name="flavor"       value="delete_email" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
 
  <div class="buttonfloat">
