--- a/dada/templates/delete_email_screen_filtered.tmpl
+++ b/dada/templates/delete_email_screen_filtered.tmpl
@@ -17,7 +17,7 @@ Remove
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="process" value="delete" />
- <input type="hidden" name="f"       value="remove_subscribers" />
+ <input type="hidden" name="flavor"       value="remove_subscribers" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
   
 <!-- tmpl_if have_subscribed_addresses -->
