--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -26,7 +26,7 @@
 <!-- /tmpl_if --> 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" enctype="multipart/form-data" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-<input type="hidden" name="f" value="edit_archived_msg" />
+<input type="hidden" name="flavor" value="edit_archived_msg" />
 
 
 <!-- tmpl_var big_blob_of_form_widgets_to_edit_an_archived_message --> 
