--- a/dada/templates/edit_archived_msg_prefs_screen.tmpl
+++ b/dada/templates/edit_archived_msg_prefs_screen.tmpl
@@ -6,7 +6,7 @@
 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
-	 <input type="hidden" name="f" value="edit_archived_msg" /> 
+	 <input type="hidden" name="flavor" value="edit_archived_msg" /> 
 	
 	<!-- tmpl_if done --> 
 	
