--- a/dada/templates/edit_html_type_screen.tmpl
+++ b/dada/templates/edit_html_type_screen.tmpl
@@ -83,7 +83,7 @@
 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="edit_html_type" />
+<input type="hidden" name="flavor"       value="edit_html_type" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear All Changes" />
  <input type="submit" class="processing" value="Save All Changes" />
