--- a/dada/templates/edit_template_screen.tmpl
+++ b/dada/templates/edit_template_screen.tmpl
@@ -121,7 +121,7 @@
  <p>
 	
 	<input type="hidden" name="process" value="true" />
-	<input type="hidden" name="f"       value="edit_template" />
+	<input type="hidden" name="flavor"       value="edit_template" />
 
   <input type="hidden" name="default_template" value="<!-- tmpl_var default_template escape="HTML" -->" />
   <div class="buttonfloat">
