--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -640,7 +640,7 @@
 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f" value="edit_type" />
+<input type="hidden" name="flavor" value="edit_type" />
 <div class="buttonfloat">
 		<input type="submit" class="processing" value="Save All Changes" />
 	<input type="reset" class="cautionary" value="Clear All Changes" />
