--- a/dada/templates/error_already_sent_unsub_confirmation_screen.tmpl
+++ b/dada/templates/error_already_sent_unsub_confirmation_screen.tmpl
@@ -55,7 +55,7 @@ address: </p>
 </p>
 
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
-<input type="hidden" name="f" value="resend_conf" />
+<input type="hidden" name="flavor" value="resend_conf" />
 
 <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
 <input type="hidden" name="email" value="<!-- tmpl_var subscriber.email -->" /> 
