--- a/dada/templates/filter_using_black_list.tmpl
+++ b/dada/templates/filter_using_black_list.tmpl
@@ -4,7 +4,7 @@
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="process" value="delete" />
- <input type="hidden" name="f"       value="remove_subscribers" />
+ <input type="hidden" name="flavor"       value="remove_subscribers" />
  <input type="hidden" name="type"    value="list" />
  <input type="hidden" name="add_to_black_list" value="<!-- tmpl_var add_to_black_list -->" />
  <p>
