--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -50,7 +50,7 @@
 
      <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" target="_blank">
      <p style="text-align:center"> 
-             <input type="hidden" name="f" value="preview_jquery_plugin_subscription_form">
+             <input type="hidden" name="flavor" value="preview_jquery_plugin_subscription_form">
              <input type="submit" class="bigger_button processing preview_jquery_plugin_subscription_form" value="View Working Preview...">
      </p> 
      </form> 
