--- a/dada/templates/list_cp_options_screen.tmpl
+++ b/dada/templates/list_cp_options_screen.tmpl
@@ -136,7 +136,7 @@ List Message Sending Screens
 <!-- /tmpl_if --> 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="list_cp_options" />
+<input type="hidden" name="flavor"       value="list_cp_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Changes" />
