--- a/dada/templates/list_download_widget.tmpl
+++ b/dada/templates/list_download_widget.tmpl
@@ -2,7 +2,7 @@
 
   <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
 	
-    <input type="hidden" name="f"    value="text_list" />
+    <input type="hidden" name="flavor"    value="text_list" />
     <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 
 	<!-- tmpl_if expr="defined(query) || defined(advanced_query)" --> 
