--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -43,7 +43,7 @@
 
 
 
-<input type="hidden" id="f" name="f" value="list_invite" />
+<input type="hidden" id="f" name="flavor" value="list_invite" />
 
 <!-- tmpl_if verified_addresses --> 
 
