--- a/dada/templates/list_login_form.tmpl
+++ b/dada/templates/list_login_form.tmpl
@@ -5,7 +5,7 @@
 
 
 <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f"       value="login" />
+ <input type="hidden" name="flavor"       value="login" />
  <input type="hidden" name="process" value="true" />
 
  <h1>
