--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -930,7 +930,7 @@
 <div class="floatclear"></div>
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="list_options" />
+<input type="hidden" name="flavor"       value="list_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save List Options" />
