--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -177,7 +177,7 @@
 </h1>
 
 <form action="http://dadamailproject.com/cgi-bin/dada/mail.cgi" method="get" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f"      value="subscribe" />
+ <input type="hidden" name="flavor"      value="subscribe" />
  <input type="hidden" name="list"   value="dada_announce" />
  <input type="text"   name="email"  value="<!-- tmpl_var name="list_owner_email" -->" size="24" maxlength="1024" />
  <input type="submit" class="processing" value="Subscribe" />
