--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -56,7 +56,7 @@
 </fieldset> 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="mass_mailing_options" />
+<input type="hidden" name="flavor"       value="mass_mailing_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Options" />
