--- a/dada/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/templates/mass_mailing_preferences_screen.tmpl
@@ -308,7 +308,7 @@ Since sending to your entire mailing list is usually a lengthy process (for most
 
 
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="mass_mailing_preferences" />
+<input type="hidden" name="flavor"       value="mass_mailing_preferences" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Sending Options" />
