--- a/dada/templates/mass_update_profile_form.tmpl
+++ b/dada/templates/mass_update_profile_form.tmpl
@@ -11,7 +11,7 @@
 
         <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="mass_update_profiles">
         
-            <input type="hidden" name="f" value="mass_update_profiles" /> 
+            <input type="hidden" name="flavor" value="mass_update_profiles" /> 
         
             <input type="hidden" id="mass_update_advanced_query" name="advanced_query" value="" /> 
         
