--- a/dada/templates/new_list_created_screen.tmpl
+++ b/dada/templates/new_list_created_screen.tmpl
@@ -115,7 +115,7 @@
    <label for="admin_password">
     List/<!-- tmpl_var PROGRAM_NAME --> Root Password:
    </label><br />
-    <input type="hidden"   name="f"          value="login" />
+    <input type="hidden"   name="flavor"          value="login" />
     <input type="hidden"   name="admin_list" value="<!-- tmpl_var list -->" />
     <input type="password" name="admin_password" id="admin_password" maxlength="24" />
    <input type="hidden" name="auth_state" value="<!-- tmpl_var auth_state -->" /> 
