--- a/dada/templates/pass_gen_screen.tmpl
+++ b/dada/templates/pass_gen_screen.tmpl
@@ -9,7 +9,7 @@
   </label>
   a password that you would like to encrypt.<br /> 
 
-  <input type="hidden" name="f" value="pass_gen" />
+  <input type="hidden" name="flavor" value="pass_gen" />
   <input type="password" name="pw" id="pw" size="16" />
   <input type="submit" value="encrypt password"/>
  </p>
