--- a/dada/templates/sending_preferences_screen.tmpl
+++ b/dada/templates/sending_preferences_screen.tmpl
@@ -499,7 +499,7 @@
 
 
 <input type="hidden" name="process" id="process" value="1" /> 
-<input type="hidden" name="f" id="flavor" value="sending_preferences" />
+<input type="hidden" name="flavor" id="flavor" value="sending_preferences" />
 
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
