--- a/dada/templates/sending_tuning_options.tmpl
+++ b/dada/templates/sending_tuning_options.tmpl
@@ -169,7 +169,7 @@
          
         </table> 
         
-        <input type="hidden" name="f"       value="sending_tuning_options" />
+        <input type="hidden" name="flavor"       value="sending_tuning_options" />
         
         <div class="buttonfloat">
          
@@ -278,7 +278,7 @@
 </table> 
     
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="sending_tuning_options" />
+<input type="hidden" name="flavor"       value="sending_tuning_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear" />
  <input type="submit" class="processing" value="Create New Tuning" />
@@ -303,7 +303,7 @@
     
     
     <input type="hidden" name="process" value="remove_all" /> 
-    <input type="hidden" name="f"       value="sending_tuning_options" />
+    <input type="hidden" name="flavor"       value="sending_tuning_options" />
     <!-- <div class="buttonfloat"> --> 
     
     <div style="text-align:center"> 
