--- a/dada/templates/setup_info_login_screen.tmpl
+++ b/dada/templates/setup_info_login_screen.tmpl
@@ -16,7 +16,7 @@
   </label>
   to continue:
   <br />
-  <input type="hidden" name="f" value="setup_info" />
+  <input type="hidden" name="flavor" value="setup_info" />
   <input type="password" name="root_password" id="root_password" value="" maxlength="24" />
   <input type="submit" value="Continue..." class="cautionary" />
  </p>
