--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -80,7 +80,7 @@ Email&nbsp;Address:
 	</div> 
 <!-- /tmpl_if -->
 
-<input type="hidden" name="f" id="f_s" value="subscribe" />
+<input type="hidden" name="flavor" id="f_s" value="subscribe" />
 
 
 <div class="buttonfloat"> 
