--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -362,7 +362,7 @@
 </fieldset>
 	
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="f"       value="subscription_options" />
+<input type="hidden" name="flavor"       value="subscription_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Subscription Options" />
