--- a/dada/templates/text_box_login_form.tmpl
+++ b/dada/templates/text_box_login_form.tmpl
@@ -1,7 +1,7 @@
 <!-- begin text_box_login_form.tmpl -->
 
 <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
- <input type="hidden" name="f"       value="login" />
+ <input type="hidden" name="flavor"       value="login" />
  <input type="hidden" name="process" value="true" />
 
 <!-- tmpl_if referer --> 
