--- a/dada/templates/validate_remove_email_widget.tmpl
+++ b/dada/templates/validate_remove_email_widget.tmpl
@@ -22,7 +22,7 @@
 </div> 
 
 <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f" value="validate_remove_email" />
+ <input type="hidden" name="flavor" value="validate_remove_email" />
  <input type="hidden" name="process" value="1" />
  <input type="hidden" name="email" value="<!-- tmpl_var email -->" />
 
