--- a/dada/templates/validate_update_email_widget.tmpl
+++ b/dada/templates/validate_update_email_widget.tmpl
@@ -49,7 +49,7 @@
 	
 			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		
-				<input type="hidden" name="f" value="validate_update_email" /> 
+				<input type="hidden" name="flavor" value="validate_update_email" /> 
 				<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
 				<input type="hidden" name="updated_email" value="<!-- tmpl_var updated_email -->" />
 				<input type="hidden" name="process" value="1" /> 
