--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -100,7 +100,7 @@
 	</form>
 
 		<form action="<!-- tmpl_var S_PROGRAM_URL -->" style="display:inline;margin:0">  
-		   <input type="hidden" name="f" value="purge_all_archives" />  
+		   <input type="hidden" name="flavor" value="purge_all_archives" />  
 		   <input type="submit" class="small_button purge_archives" value="Purge All Archive Messages" />
 	   </form> 
 
