--- a/dada/templates/view_archive_screen.tmpl
+++ b/dada/templates/view_archive_screen.tmpl
@@ -43,7 +43,7 @@
 
 <div class="buttonfloat">
 	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get"> 
-		<input type="hidden" name="f" value="delete_archive" /> 
+		<input type="hidden" name="flavor" value="delete_archive" /> 
 		<input type="hidden" name="address" value="<!-- tmpl_var id -->" />
 		<input type="submit" class="alertive" value="Delete Message" />    
 	 </form>
@@ -51,7 +51,7 @@
 
 <div class="buttonfloat">
 	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get"> 
-		<input type="hidden" name="f" value="edit_archived_msg" /> 
+		<input type="hidden" name="flavor" value="edit_archived_msg" /> 
 		<input type="hidden" name="id" value="<!-- tmpl_var id -->" />
 		<input type="submit" class="cautionary" value="Edit Message..." />    
 	 </form> 
