--- a/dada/templates/error_bad_setup_screen.tmpl
+++ b/dada/templates/error_bad_setup_screen.tmpl
@@ -40,7 +40,7 @@
 
 <div style="text-align:center">
 	<form accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-		<input type="hidden" name="f" value="setup_info" /> 
+		<input type="hidden" name="flavor" value="setup_info" /> 
 		<input type="submit" value="Click Here For More Information..." class="cautionary" /> 
 	</form>
 </div>
