--- a/dada/templates/list/subscribed.tmpl
+++ b/dada/templates/list/subscribed.tmpl
@@ -25,7 +25,7 @@
 <!-- tmpl_if PROFILE_ENABLED -->
 
     <form action="<!-- tmpl_var PROGRAM_URL -->" method="get">
-        <input type="hidden" name="f" value="profile" />
+        <input type="hidden" name="flavor" value="profile" />
         <p style="text-align:center">
          <input type="submit" value="Visit Your Profle" class="processing bigger_button" /> 
 <br />
