--- a/dada/templates/list_popup_login_form.tmpl
+++ b/dada/templates/list_popup_login_form.tmpl
@@ -1,7 +1,7 @@
 <!-- begin list_popup_login_form.tmpl -->
 
 <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f"       value="login" />
+ <input type="hidden" name="flavor"       value="login" />
  <input type="hidden" name="process" value="true" />
 
 <!-- tmpl_if referer --> 
