--- a/dada/templates/list_search_form_widget.tmpl
+++ b/dada/templates/list_search_form_widget.tmpl
@@ -2,7 +2,7 @@
     <div id="basic_list_search_form">
         <form id="search_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;" >
           <input type="text"   name="query" id="search_query" class="small_input" value="<!-- tmpl_var query default="" escape="HTML" -->" />
-          <input type="hidden" name="f"    value="view_list" />
+          <input type="hidden" name="flavor"    value="view_list" />
           <input type="hidden" name="type" value="<!-- tmpl_var type default="list" -->" />
           <input type="button" class="small_button search_list" value="Search <!-- tmpl_var type_title escape="HTML" -->" />
 
