--- a/dada/templates/minimal_subscription_form.tmpl
+++ b/dada/templates/minimal_subscription_form.tmpl
@@ -1,5 +1,5 @@
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f" value="s" /> 
+ <input type="hidden" name="flavor" value="s" /> 
  <input type="hidden" name="l" value="<!-- tmpl_var list_settings.list -->" /> 
  <input type="text" name="email" value="" />
  <input type="submit" value="Subscribe" />
