--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -392,7 +392,7 @@
 		<fieldset> 
 			<div class="buttonfloat">
 			<form action="<!-- tmpl_var PluginURL -->" method="post"> 
-			<input type="hidden" name="f"    value="export_subscribers" /> 
+			<input type="hidden" name="flavor"    value="export_subscribers" /> 
 			<input type="hidden" name="type" value="opens" /> 
 			<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" />
 			<input type="submit" value="Export Subscribers Opening This Message" class="processing" /> 
@@ -478,7 +478,7 @@
 	<fieldset> 
 		<div class="buttonfloat">
 		<form action="<!-- tmpl_var PluginURL -->" method="post"> 
-		<input type="hidden" name="f"    value="export_subscribers" /> 
+		<input type="hidden" name="flavor"    value="export_subscribers" /> 
 		<input type="hidden" name="type" value="clickthroughs" /> 
 		<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" />
 		<input type="submit" value="Export Subscribers Clickthroughing This Message" class="processing" /> 
@@ -639,7 +639,7 @@
 		<fieldset> 
 			<div class="buttonfloat">
 			<form action="<!-- tmpl_var PluginURL -->" method="post"> 
-			<input type="hidden" name="f"    value="export_subscribers" /> 
+			<input type="hidden" name="flavor"    value="export_subscribers" /> 
 			<input type="hidden" name="type" value="abuse_reports" /> 
 			<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" />
 			<input type="submit" value="Export Subscribers Reporting Abuse for This Message" class="processing" /> 
