--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -58,7 +58,7 @@
     <!-- /tmpl_If -->
 
  <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" />
- <input type="hidden" id="f" name="f" value="send_url_email" />
+ <input type="hidden" id="f" name="flavor" value="send_url_email" />
  <input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" />
  
 
