--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -265,7 +265,7 @@ Current Mass Mailings
      <!-- tmpl_if current_list --> 
 
 	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline" class="stop_mass_mailing"> 
-	    <input type="hidden" name="f" value="sending_monitor" /> 
+	    <input type="hidden" name="flavor" value="sending_monitor" /> 
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="kill" /> 
