--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -69,7 +69,7 @@
   
     
 	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline"> 
-	    <input type="hidden" name="f" value="sending_monitor" /> 
+	    <input type="hidden" name="flavor" value="sending_monitor" /> 
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="restart" /> 
@@ -80,7 +80,7 @@
     
     
 	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline"> 
-	    <input type="hidden" name="f" value="sending_monitor" /> 
+	    <input type="hidden" name="flavor" value="sending_monitor" /> 
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="resume" /> 
@@ -89,7 +89,7 @@
     
     
 	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline" id="pause_mass_mailing"> 
-	    <input type="hidden" name="f" value="sending_monitor" /> 
+	    <input type="hidden" name="flavor" value="sending_monitor" /> 
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="pause" /> 
@@ -98,7 +98,7 @@
     
     
 	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline" class="stop_mass_mailing"> 
-	    <input type="hidden" name="f" value="sending_monitor" /> 
+	    <input type="hidden" name="flavor" value="sending_monitor" /> 
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="kill" /> 
@@ -295,7 +295,7 @@
 
 <div class="buttonfloat">
  <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" target="_blank">
-  <input type="hidden" name="f"    value="print_mass_mailing_log"                              /> 
+  <input type="hidden" name="flavor"    value="print_mass_mailing_log"                              /> 
   <input type="hidden" name="id"   value="<!-- tmpl_var message_id escape="HTML" -->"          /> 
   <input type="hidden" name="type" value="<!-- tmpl_var message_type -->"                      /> 
   <input type="submit"             value="Open Mass Mailing Log in a New Window" class="plain" /> 
