--- a/dada/templates/unsubscribe_request.tmpl
+++ b/dada/templates/unsubscribe_request.tmpl
@@ -4,7 +4,7 @@
 	<legend>Unsubscribe From, <!-- tmpl_var list_settings.list_name --></legend>
 	
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
-	<input type="hidden" name="f" value="u" /> 
+	<input type="hidden" name="flavor" value="u" /> 
 	<input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
 	<input type="text"   name="email" value="<!-- tmpl_var subscriber.email escape="HTML" -->" />
 	<input class="processing" type="submit" value="Remove."  />
