--- a/dada/templates/unsubscription_form_widget.tmpl
+++ b/dada/templates/unsubscription_form_widget.tmpl
@@ -9,7 +9,7 @@
 	</label>
 	<input type="text" name="email" id="email" value="<!-- tmpl_var email escape=HTML -->" /> <span class="error">* Required</span>
 	</p>
-	<input type="hidden" name="f" id="f_s" value="unsubscription_request" />
+	<input type="hidden" name="flavor" id="f_s" value="unsubscription_request" />
 	<p style="text-align:right;display:block">
 	<input type="submit" value="Unsubscribe" class="processing" />
 	</p> 
