--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -159,7 +159,7 @@
 	<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
 
 		 <input type="hidden" name="process" value="delete" />
-		 <input type="hidden" name="f"       value="remove_subscribers" />
+		 <input type="hidden" name="flavor"       value="remove_subscribers" />
 		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 		<!-- tmpl_if expr="(type eq 'list')" -->
 		 	<input type="submit" class="small_button" value="&#8592; Unsubscribe Checked Subscribers" />
@@ -171,7 +171,7 @@
 
 	<!-- tmpl_if EXPR="(type eq 'sub_request_list')" -->
 
-		 <input type="hidden" name="f"       value="subscription_requests" />
+		 <input type="hidden" name="flavor"       value="subscription_requests" />
 		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 		 <input type="submit" name="process" class="small_button" value="Approve Checked Subscription Requests" />
 		 <input type="submit" name="process" class="small_button" value="Deny Checked Subscription Requests" />
@@ -180,7 +180,7 @@
 
 	<!-- tmpl_if EXPR="(type eq 'unsub_request_list')" -->
 
-		 <input type="hidden" name="f"        value="unsubscription_requests" />
+		 <input type="hidden" name="flavor"        value="unsubscription_requests" />
 		 <input type="hidden" name="type"     value="<!-- tmpl_var type -->" />
 		 <input type="submit" name="process" class="small_button" value="Approve Checked Unsubscription Requests" />
 		 <input type="submit" name="process" class="small_button" value="Deny Checked Unsubscription Requests" />
@@ -189,7 +189,7 @@
 	
 	<!-- tmpl_if EXPR="(type eq 'bounced_list')" -->
 	
-			<input type="hidden" name="f"     value="process_bouncing_addresses" />
+			<input type="hidden" name="flavor"     value="process_bouncing_addresses" />
 			 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 			
 			 <input type="submit" name="process" class="small_button"  value="&#8594; Move Selected Bouncing Address Back to Subscribers" />
@@ -203,7 +203,7 @@
 		<!-- tmpl_unless query -->
 		
 			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="display:inline;margin:0">
-			 <input type="hidden" name="f"       value="remove_all_subscribers" />
+			 <input type="hidden" name="flavor"       value="remove_all_subscribers" />
 			 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 			<!-- tmpl_if expr="(type eq 'list')" -->
 			  <input type="submit" class="small_button" value="&#8656; Unsubscribe ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
@@ -222,7 +222,7 @@
 			<!-- tmpl_unless query --> 
 				<td>
 				 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="blacklist_filter_form">
-				  <input type="hidden" name="f" value="filter_using_black_list" />
+				  <input type="hidden" name="flavor" value="filter_using_black_list" />
 				  <div class="buttonfloat">
 				   <input type="submit" class="small_button" value="Filter Subscribers Through the Black List" />
 				  </div>
