--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -120,7 +120,7 @@
  advantage of.
 </p>
 <p style="text-align:center">
- <input type="button" class="plain" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VERSION escape=URL -->" />
+ <input type="button" class="plain" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VER escape=URL -->" />
 </p>
 <hr />
 
